<resources>
    <!-- ************************* App ************************* -->
    <string name="app_name"><b>With Us <i>!</i></b></string>

    <!-- ************************* App Bar ************************* -->
    <string name="appbar_title">Home</string>


    <!-- ************************* Navigation ************************* -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">익명</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- ************************* Menu ************************* -->
    <string name="menu_home">Home</string>


    <!-- ************************* Login ************************* -->
    <string name="login_text">로그인</string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_button">로그인하기</string>
    <string name="login_or">or</string>
    <string name="login_phone">전화번호 로그인</string>
    <string name="login_google">구글 아이디 로그인</string>
    <string name="login_facebook">페이스북 아이디 로그인</string>
    <string name="login_tweeter">트위터 아이디 로그인</string>
    <string name="logout_text">로그아웃</string>


    <!-- ************************* Register ************************* -->
    <string name="register_description">With Us가 처음이신가요?</string>
    <string name="register_text">회원가입</string>
    <string name="register_continue">회원가입 계속하기</string>
    <string name="register_name">이름</string>
    <string name="register_female">여성</string>
    <string name="register_male">남성</string>
    <string name="register_birth">생년월일</string>
    <string name="register_region">지역</string>
    <string name="register_interest">관심사</string>
    <string name="register_birth_ex">ex) 1999년생 01월 01일 생일 경우 19990101</string>
    <string name="register_done">가입 완료하기</string>


    <!-- ************************* Home ************************* -->
    <string name="home_search">검색해서 찾아보기</string>
    <string name="home_hot">이번 주 Hot한 모임</string>
    <string name="home_new">이번 주 신규 모임</string>


    <!-- ************************* My Page ************************* -->
    <string name="mypage_text">마이페이지</string>
    <string name="mypage_back">뒤로가기</string>
    <string name="mypage_image">사진</string>
    <string name="mypage_name">익명</string>
    <string name="mypage_nim">님</string>
    <string name="mypage_birth">생년월일</string>
    <string name="mypage_region">지역</string>
    <string name="mypage_score">활동점수</string>
    <string name="mypage_jum">점</string>
    <string name="mypage_score_num">0</string>
    <string name="mypage_change"> 회원정보 수정</string>
    <string name="mypage_quit">회원탈퇴</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_post_notice">게시글 알림 설정</string>
    <string name="mypage_chat_notice">채팅 알림 설정</string>
    <string name="mypage_notice">알림설정</string>


    <!-- ************************* User Info Change ************************* -->
    <string name="user_info_change_text">회원정보 변경</string>
    <string name="user_info_change_pw"> 변경할 비밀번호를 입력하세요.</string>
    <string name="user_info_change_name"> 변경할 이름을 입력하세요.</string>
    <string name="user_info_change_birth"> 변경할 생년월일을 입력하세요.</string>
    <string name="user_info_change_birth_ex">ex) 1999년생 01월 01일 생일 경우 19990101</string>
    <string name="user_info_change_done">회원정보 수정하기</string>
    <string name="user_info_change_female">여성</string>
    <string name="user_info_change_male">남성</string>


    <!-- ************************* Post Form ************************* -->
    <string name="post_form_text">게시글 작성</string>
    <string name="post_form_title">제목</string>
    <string name="post_form_content">내용</string>
    <string name="post_form_done">게시글 작성 완료하기</string>

    <!-- ************************* Post Detail ************************* -->
    <string name="postdetail_comment_title">댓글</string>
    <string name="postdetail_comment_hint">댓글 내용을 입력하세요.</string>
    <string name="postdetail_comment_register">등록</string>
    <string name="postdetail_content">게시글 내용이 존재하지 않습니다.</string>
    <string name="postdetail_comment_delete">삭제</string>
    <string name="postdetail_comment_reply">답글</string>
    <string name="postdetail_commentreply_delete">삭제</string>

    <!-- ************************* Comment Reply ************************* -->
    <string name="commentreply_comment_hint">답글 내용을 입력하세요.</string>
    <string name="commentreply_comment_register">등록</string>

</resources>