<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fg_register_layout_margintop"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fg_register_layout_paddingleft"
        android:paddingRight="@dimen/fg_register_layout_paddingright">

        <EditText
            android:id="@+id/activity_register_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="@dimen/fg_register_name_minheight"
            android:textSize="@dimen/fg_register_name_textsize" />

        <EditText
            android:id="@+id/activity_register_et_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fg_register_birth_margintop"
            android:hint="@string/register_birth"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="@dimen/fg_register_birth_minheight"
            android:textSize="@dimen/fg_register_birth_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_birth_ex" />

        <RadioGroup
            android:id="@+id/activity_register_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_register_rb_female"
                android:layout_width="@dimen/fg_register_female_width"
                android:layout_height="wrap_content"
                android:text="@string/register_female" />

            <RadioButton
                android:id="@+id/activity_register_rb_male"
                android:layout_width="@dimen/fg_register_male_width"
                android:layout_height="wrap_content"
                android:text="@string/register_male" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_region" />

        <Spinner
            android:id="@+id/activity_register_spn_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/region"
            android:gravity="center"
            android:minHeight="@dimen/fg_register_region_minheight"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_interest" />

        <Spinner
            android:id="@+id/activity_register_spn_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/interest"
            android:gravity="center"
            android:minHeight="@dimen/fg_register_interest_minheight"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/activity_register_fragment_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/register_done" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>