<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#3A52DA">

    <TextView
        android:id="@+id/activity_login_tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_appname_margintop"
        android:text="@string/app_name"
        android:textColor="@color/indigo"
        android:textSize="@dimen/login_appname_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_margintop"
        android:text="@string/login_text"
        android:textColor="#6C6B6B"
        android:textSize="@dimen/login_title_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_vertical_layout_margintop"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_vertical_layout_paddingleft"
        android:paddingRight="@dimen/login_vertical_layout_paddingright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_login_et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_id_margintop"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/login_id_drawablepadding"
            android:hint="@string/login_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/login_id_minheight"
            android:textSize="@dimen/login_id_textsize" />

        <EditText
            android:id="@+id/activity_login_et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/login_pw_drawablepadding"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="@dimen/login_pw_minheight"
            android:textSize="@dimen/login_pw_textsize" />

        <Button
            android:id="@+id/activity_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_loginok_margintop"
            android:backgroundTint="@color/indigo"
            android:drawableTint="@color/snow"
            android:text="@string/login_button"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_or_margintop"
            android:gravity="center"
            android:text="@string/login_or"
            android:textColor="#B6B6B6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/activity_login_btn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_phone_margintop"
            android:backgroundTint="@color/darkmagenta"
            android:drawableLeft="@drawable/ic_baseline_call_24"
            android:drawableTint="@color/white"
            android:text="@string/login_phone"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/activity_login_btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:drawableLeft="@drawable/facebooklogo"
            android:text="@string/login_facebook" />

        <Button
            android:id="@+id/activity_login_btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:drawableLeft="@drawable/twitterlogo"
            android:text="@string/login_tweeter"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/activity_login_btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DFE4DF"
            android:drawableLeft="@drawable/googlelogo"
            android:text="@string/login_google"
            android:textColor="#3E2121" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:paddingTop="@dimen/login_horizontal_layout_paddingtop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_description"
                android:textSize="@dimen/login_suggest_singup_textsize" />

            <TextView
                android:id="@+id/activity_login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_register_marginstart"
                android:text="@string/register_text"
                android:textColor="@color/black"
                android:textSize="@dimen/login_register_textsize"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>