<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceblue">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/mypage_text"
                app:srcCompat="@drawable/ic_baseline_person_24"
                app:tint="@color/azure" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/user_info_mypage_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mypage_text"
                android:textColor="@color/white"
                android:textSize="@dimen/user_info_mypage_textsize" />

            <ImageView
                android:id="@+id/activity_user_info_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/mypage_back"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/user_info_layout_marginleft"
            android:layout_marginRight="@dimen/user_info_layout_marginright">

            <ImageView
                android:id="@+id/activity_user_info_iv"
                android:layout_width="@dimen/user_info_profile_width"
                android:layout_height="@dimen/user_info_profile_height"
                android:layout_marginTop="@dimen/user_info_profile_margintop"
                android:contentDescription="@string/mypage_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:srcCompat="@mipmap/ic_launcher_round"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/user_info_profile_strokewidth" />

            <TextView
                android:id="@+id/activity_user_info_tv_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_info_changeinfo_margintop"
                android:gravity="center"
                android:text="@string/mypage_change"
                android:textColor="#546E7A"
                android:textSize="@dimen/user_info_changeinfo_textsize"
                app:drawableLeftCompat="@drawable/ic_baseline_settings_24"
                app:drawableTint="@color/darkgray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_user_info_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_name_marginstart"
                android:layout_marginTop="@dimen/user_info_name_margintop"
                android:text="@string/mypage_name"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_name_textsize"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_nim_marginstart"
                android:layout_marginTop="@dimen/user_info_nim_margintop"
                android:text="@string/mypage_nim"
                android:textColor="@color/black"
                android:textSize="@dimen/user_info_nim_textsize"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/activity_user_info_tv_change"
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_tv_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_user_info_tv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_birth_marginstart"
                android:layout_marginTop="@dimen/user_info_birth_margintop"
                android:text="@string/mypage_birth"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_iv"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_tv_name" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_scoretext_marginstart"
                android:layout_marginTop="@dimen/user_info_scoretext_margintop"
                android:text="@string/mypage_score"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_iv"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_tv_region" />

            <TextView
                android:id="@+id/activity_user_info_tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_region_marginstart"
                android:layout_marginTop="@dimen/user_info_region_margintop"
                android:text="@string/mypage_region"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_iv"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_tv_birth" />

            <TextView
                android:id="@+id/activity_user_info_tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_score_marginstart"
                android:layout_marginTop="@dimen/user_info_score_margintop"
                android:text="@string/mypage_score_num"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_tv_region" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_jum_marginstart"
                android:layout_marginTop="@dimen/user_info_jum_margintop"
                android:text="@string/mypage_jum"
                app:layout_constraintStart_toEndOf="@+id/activity_user_info_tv_score"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_tv_region" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_info_notifytext_margintop"
                android:text="@string/mypage_notice"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_iv" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_switch1_marginstart"
                android:layout_marginTop="@dimen/user_info_switch1_margintop"
                android:minHeight="@dimen/user_info_switch1_minheight"
                android:text="@string/mypage_chat_notice"
                android:textColor="@color/dimgray"
                android:textSize="@dimen/user_info_switch1_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_info_switch2_marginstart"
                android:minHeight="@dimen/user_info_switch2_minheight"
                android:text="@string/mypage_post_notice"
                android:textColor="@color/dimgray"
                android:textSize="@dimen/user_info_switch2_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <Button
                android:id="@+id/activity_user_info_btn_logout"
                android:layout_width="0dp"
                android:layout_height="@dimen/user_info_logout_height"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/aliceblue"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/mypage_logout"
                android:textColor="@color/dimgray"
                android:textSize="@dimen/user_info_logout_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch2" />

            <Button
                android:id="@+id/activity_user_info_btn_quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/aliceblue"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:text="@string/mypage_quit"
                android:textColor="@color/dimgray"
                android:textSize="@dimen/user_info_quit_textsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_user_info_btn_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>